--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="styles.css" rel="stylesheet" type="text/css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
-        <title>Hello World</title>
+        <title>Digital Album</title>
     </head>
     <body>
-        <p> Hello World! </p>
+        <div class="container">
+            <div class="image-box">
+                <h1>Kobe Bryant - The Legend</h1>
+                <input type="radio" id="img-01" name="image" checked>
+                <input type="radio" id="img-02" name="image">
+                <input type="radio" id="img-03" name="image">
+                <input type="radio" id="img-04" name="image">
+                <input type="radio" id="img-05" name="image">
+                <div class="image-bg"></div>
+            </div>
+        </div>
     </body>
 </html>
