--- a/hw1/index.html
+++ b/hw1/index.html
@@ -17,6 +17,15 @@
                 <input type="radio" id="img-05" name="image">
                 <div class="image-bg"></div>
             </div>
+            <div class="menu">
+                <input type="radio" id="menu-all" checked>
+                <input type="radio" id="menu-championship">
+                <input type="radio" id="menu-contest">
+                <h3>Photo</h3>
+                <label for="menu-all">All</label>
+                <label for="menu-championship">Championship</label>
+                <label for="menu-contest">Contest</label>
+            </div>
         </div>
     </body>
 </html>
