--- a/hw1/index.html
+++ b/hw1/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>La Calle Hermosa</h1>
     <div class="navbar">
-        <a href="#intro">Intro</a>
-        <a href="#city">City</a>
-        <a href="#more">More</a>
+        <a href="#street">Street</a>
+        <a href="#food">Food & Drink</a>
+        <a href="#nature">Nature</a>
         </div>
     </div>
     <div class="container">      
