--- a/hw2/index.html
+++ b/hw2/index.html
@@ -10,12 +10,22 @@
 <body>
     <h1>La foto Hermosa</h1>
     <div class="navbar">
-        <a href="#street">Street</a>
-        <a href="#food">Food & Drink</a>
-        <a href="#nature">Nature</a>
+        <a id="street" onclick="switchAlbum('street')">Street</a>
+        <a id="food" onclick="switchAlbum('food')">Food & Drink</a>
+        <a id="nature" onclick="switchAlbum('nature')">Nature</a>
         </div>
     </div>
-    <div class="container"></div>
+    <div class="container">
+        <div class="displayBox_button">
+            <img src="https://img-premium.flaticon.com/png/512/2722/premium/2722991.png?token=exp=1633669663~hmac=fcc07e2f3fb4afbb6921169088e0f508" id="prevButton" onclick="prev()">
+        </div>
+        <div class="displayBox">
+            <img src="" id="displayBoxImg">
+        </div>
+        <div class="displayBox_button">
+            <img src="https://img-premium.flaticon.com/png/512/2722/premium/2722985.png?token=exp=1633668185~hmac=8ccc85d0ddd3dcbaf3cce67b8eec9a41" id="nextButton" onclick="next()">
+        </div>
+    </div>
     <div class="row"></div>
     <script src="main.js"></script>
 </body>
