finish hw1 basic requiement

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -13,6 +13,7 @@
         <a id="street" onclick="switchAlbum('street')">Street</a>
         <a id="food" onclick="switchAlbum('food')">Food & Drink</a>
         <a id="nature" onclick="switchAlbum('nature')">Nature</a>
+        <a id="empty" onclick="switchAlbum('empty')">Empty Album</a>
         </div>
     </div>
     <div class="container">
