--- a/hw2/index.html
+++ b/hw2/index.html
@@ -16,6 +16,10 @@
         <a id="empty" onclick="switchAlbum('empty')">Empty Album</a>
         </div>
     </div>
+    <div class="card">
+        <h4 id="infoText1">Amount of pictures in all albums: <span id="totalPic"></span></h4>
+        <h4 id="infoText2">Amount of pictures in this album: <span id="albumPic"></span></h4>
+    </div>
     <div class="container">
         <div class="displayBox_button">
             <img src="https://img-premium.flaticon.com/png/512/2722/premium/2722991.png?token=exp=1633669663~hmac=fcc07e2f3fb4afbb6921169088e0f508" id="prevButton" onclick="prev()">
