finish the advanced requirement 4

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -19,6 +19,7 @@
     <div class="card">
         <h4 id="infoText1">Amount of pictures in all albums: <span id="totalPic"></span></h4>
         <h4 id="infoText2">Amount of pictures in this album: <span id="albumPic"></span></h4>
+        <h4 id="infoText3">You are currently choosing picture <span id="currentImgId"></span></h4>
     </div>
     <div class="container">
         <div class="displayBox_button">
