--- a/hw2/index.html
+++ b/hw2/index.html
@@ -32,7 +32,8 @@
             <img src="https://img-premium.flaticon.com/png/512/2722/premium/2722985.png?token=exp=1633668185~hmac=8ccc85d0ddd3dcbaf3cce67b8eec9a41" id="nextButton" onclick="next()">
         </div>
     </div>
-    <div class="row"></div>
+    <div class="row">
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
