--- a/hw3/index.html
+++ b/hw3/index.html
@@ -21,7 +21,7 @@
                 <ul class="todo-app__list" id="todo-list">
                 </ul>
             </section>
-            <!-- <footer class="todo-app__footer" id="todo-footer">
+            <footer class="todo-app__footer" id="todo-footer">
                 <div class="todo-app__total">2 left</div>
                 <ul class="todo-app__view-buttons">
                     <button>All</button>
@@ -31,7 +31,7 @@
                 <div class="todo-app__clean">
                     <button>Clear completed</button>
                 </div>
-            </footer> -->
+            </footer>
         </div>
         <script src="main.js"></script>
     </body>
