--- a/hw2/index.html
+++ b/hw2/index.html
@@ -23,13 +23,13 @@
     </div>
     <div class="container">
         <div class="displayBox_button">
-            <img src="https://img-premium.flaticon.com/png/512/2722/premium/2722991.png?token=exp=1633669663~hmac=fcc07e2f3fb4afbb6921169088e0f508" id="prevButton" onclick="prev()">
+            <img src="https://cdn-icons-png.flaticon.com/512/318/318276.png" id="prevButton" onclick="prev()">
         </div>
         <div class="displayBox">
             <img src="" id="displayBoxImg">
         </div>
         <div class="displayBox_button">
-            <img src="https://img-premium.flaticon.com/png/512/2722/premium/2722985.png?token=exp=1633668185~hmac=8ccc85d0ddd3dcbaf3cce67b8eec9a41" id="nextButton" onclick="next()">
+            <img src="https://cdn-icons-png.flaticon.com/512/318/318275.png" id="nextButton" onclick="next()">
         </div>
     </div>
     <div class="row">
