--- a/hw2/index.html
+++ b/hw2/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>La foto Hermosa</h1>
+    <div class="topBanner">
+        <div class="h1" id="h1"><h1>La foto Hermosa</h1></div>
+    </div>
     <div class="navbar">
         <a id="street" onclick="switchAlbum('street')">Street</a>
         <a id="food" onclick="switchAlbum('food')">Food & Drink</a>
